--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Riley O'Shea <RileyOShea@fairisaac.com>"]
 
 [dependencies]
 rand = "0.5.5"
+time = "0.1"
 
 [dev-dependencies]
 criterion = "0.2"
